[package]
name = "nsq-rust"
version = "0.1.0"
authors = ["Alessandro Cresto Miseroglio <alex179ohm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.2.0", features = ["unstable"] }
async-tls = "0.6.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hostname = "0.2"
byteorder = "1.3.2"
log = "0.4.8"
bytes = "0.4.12"
rustls = "0.16"

[dev-dependencies]
nsq-rust = { path = "./" }
femme = "1.3.0"
