[package]
name = "nsq-rust"
version = "0.1.0"
authors = ["Alessandro Cresto Miseroglio <alex179ohm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.5"
async-tls = "0.6"
futures = "0.3"
crossbeam-channel = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hostname = "0.2"
byteorder = "1.3"
bytes = "0.5"
log = "0.4"
rustls = "0.16"

[dev-dependencies]
femme = "1.3"
